Update the read me

--- a/README
+++ b/README
@@ -27,10 +27,10 @@ Set up Paypal:
 1. Sign up for https://www.paypal.com/
 2. Create a Token for purchase confirmation on your business test user
 	A. https://cms.paypal.com/us/cgi-bin/?cmd=_render-content&content_ID=developer/howto_html_paymentdatatransfer
-
+	B. Use http://localhost/index.php?page=paypalcomplete as the return url.. with your domain.. 
 Grid Instance:
 1. Copy the "bin" folder and paste it into your Aurora-Sim Folder
-2. Add the following to Grid.ini
+2. Add the following to Main.ini in your AuroraServerConfiguration
 
 [Handlers]
 	CurrencyHandler = StarDust
