Changes to the stardust TOS/Lic Agreement. Finished up chagnes to the new config option 'DisplayPayMessages'.

--- a/README
+++ b/README
@@ -7,10 +7,14 @@ About StarDust
 - Integration in with Web UI
 
 =============================================================
-DISCLAIMER/License Agreement - READ ME <<<<<<<<<<<<<<<<<<<<<<
+TOS/License Agreement - READ ME <<<<<<<<<<<<<<<<<<<<<<
 =============================================================
-By using this module you agree that Skidz Tweak, Aurora-Sim, or other contributing developers are in no way responsable for any damages that may occure as a result of using this module.
-By using this module you agree that you understand the risks of running this module and are fully willing to except those risks and any consequences that may occure.
+Do not use this module in a production environment. 
+This module is for educational purposes only, and should not be used in a production environment!
+By using this module you agree that Skidz Tweak, Aurora-Sim, or other contributing developers are in no way responsible for any damages that may occur as a result of using this module.
+By using this module you agree that you understand the risks of running this module and are fully willing to accept those risks and any consequences that may occur.
+By downing and using this module you are agreeing to the Terms of service listed above. 
+If you do not agree with the above do not use this module.
 
 =============================================================
 BETA INFO
